Some refactors + TransportShardBulkAction waits for async